# openstack-requestsexceptions

./: .gitignore  python-requestsexceptions.spec  setup.cfg
debian/: .gitignore  changelog  control  python3-requestsexceptions.lintian-overrides
debian/source/: lintian-overrides
