[metadata]
name = requestsexceptions
version = 1.4.0
summary = Import exceptions from potentially bundled packages in requests.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
packages = find:
package_dir = = .
include_package_data = True
python_requires = >=3.5

[options.packages.find]
where = .

[files]
packages =
    requestsexceptions

[wheel]
universal = 1
